--- a/index.html
+++ b/index.html
@@ -5,10 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influence Gear</title>
     <link rel="stylesheet" href="./influence.css/influe.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
-<body>
+<body class="poppins-thin">
     <header>
-        
+        <nav class="navbar">
+            <div class="brand-logo">
+                <h3>Influencer products</h3>
+            </div>
+
+            <div class="menu-pages">
+                <ul class="menu-items">
+                    <li class="links"><a href="">Home</a></li>
+                    <li class="links"><a href="">Products</a></li>
+                    <li class="links"><a href="">SignUP</a></li>
+                    <li class="links"><a href="">Login</a></li>
+                    <li class="links"><a href="">
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i></a></li>
+                    <li class="links"><a href="">
+                        <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i></a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <main>
 
