--- a/index.html
+++ b/index.html
@@ -29,9 +29,139 @@
                 </ul>
             </div>
         </nav>
+
+        <section class="hero-section">
+            <div class="hero-info">
+                <h1 class="hero-title">
+                    Start your Journey as Influencer
+                </h1>
+
+                <p class="hero-description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros.faucibus.
+                </p>
+
+                <button class="btn-1">Preebook now <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></button>
+            </div>
+
+            <div class="hero-images">
+                <img src="./images/main-camera.png">
+            </div>
+        </section>
     </header>
     <main>
+        <!-- sponsors section -->
+         <section class="sponsors-section">
+            <div class="sponsors-images">
+                <img src="./logos/Alibaba.svg" alt="company logo">
+                <img src="./logos/Amazon.svg" alt="company logo">
+                <img src="./logos/Daraz.pk Logo.svg" alt="company logo">
+                <img src="./logos/Ebay.svg" alt="company logo">
+                <img src="./logos/Rakuten.svg" alt="company logo">
+                <img src="./logos/Target.svg" alt="company logo">
+                <img src="./logos/Walmart.svg" alt="company logo">
+            </div>
+         </section>
 
+
+         <!-- popular section -->
+          <section class="popular-section">
+              <div class="center-title">
+                <h2>Popular Collection</h2>
+              </div>
+            <div class="popular-div">
+                <div class="popular-card">
+                    <img class="popular-image" src="./images/tripod.png" alt="tripod photo">
+                    <h3 class="popular-titile">
+                        Flex Tripod
+                    </h3>
+                    <h4 class="price">$50.48</h4>
+                    <p class="popular-description">
+                        Wordwide shifting available Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-card">
+                    <img class="popular-image" src="./images/tripod.png" alt="tripod photo">
+                    <h3 class="popular-titile">
+                        Flex Tripod
+                    </h3>
+                    <h4 class="price">$50.48</h4>
+                    <p class="popular-description">
+                        Wordwide shifting available Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-card">
+                    <img class="popular-image" src="./images/tripod.png" alt="tripod photo">
+                    <h3 class="popular-titile">
+                        Flex Tripod
+                    </h3>
+                    <h4 class="price">$50.48</h4>
+                    <p class="popular-description">
+                        Wordwide shifting available Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-card">
+                    <img class="popular-image" src="./images/tripod.png" alt="tripod photo">
+                    <h3 class="popular-titile">
+                        Flex Tripod
+                    </h3>
+                    <h4 class="price">$50.48</h4>
+                    <p class="popular-description">
+                        Wordwide shifting available Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-card">
+                    <img class="popular-image" src="./images/tripod.png" alt="tripod photo">
+                    <h3 class="popular-titile">
+                        Flex Tripod
+                    </h3>
+                    <h4 class="price">$50.48</h4>
+                    <p class="popular-description">
+                        Wordwide shifting available Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-card">
+                    <img class="popular-image" src="./images/tripod.png" alt="tripod photo">
+                    <h3 class="popular-titile">
+                        Flex Tripod
+                    </h3>
+                    <h4 class="price">$50.48</h4>
+                    <p class="popular-description">
+                        Wordwide shifting available Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-card">
+                    <img class="popular-image" src="./images/tripod.png" alt="tripod photo">
+                    <h3 class="popular-titile">
+                        Flex Tripod
+                    </h3>
+                    <h4 class="price">$50.48</h4>
+                    <p class="popular-description">
+                        Wordwide shifting available Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-card">
+                    <img class="popular-image" src="./images/tripod.png" alt="tripod photo">
+                    <h3 class="popular-titile">
+                        Flex Tripod
+                    </h3>
+                    <h4 class="price">$50.48</h4>
+                    <p class="popular-description">
+                        Wordwide shifting available Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-card">
+                    <img class="popular-image" src="./images/tripod.png" alt="tripod photo">
+                    <h3 class="popular-titile">
+                        Flex Tripod
+                    </h3>
+                    <h4 class="price">$50.48</h4>
+                    <p class="popular-description">
+                        Wordwide shifting available Buyers protection possible!
+                    </p>
+                </div>
+
+            </div>
+          </section>
     </main>
     <footer>
 
